--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-<%= yield %>
+<% flash.each do |key, value| %>
+    <%= content_tag :div, value, class: "alert alert-#{key}" %>
+<% end %>
+    <%= yield %>
 
 </body>
 </html>
