--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -60,7 +60,7 @@ body {
   }
 }
 
-.main_header {
+#main_header {
   color: $dark;
   background: $white;
   padding: 2.5rem 0;
@@ -80,7 +80,7 @@ body {
         display: inline;
         margin-left: 2.5rem;
         a {
-          color: $white;
+          color: $dark;
           text-decoration: none;
         }
       }
@@ -97,6 +97,16 @@ body {
     margin: 0;
     padding: 8rem 0;
   }
+}
+
+.podcast_banner {
+
+}
+
+.sign_up_banner {
+  background-image: image-url("sign_up_banner.jpg");
+  position: cover;
+  opacity: 0.7;
 }
 
 .pagination:before, .pagination:after {
@@ -166,4 +176,4 @@ textarea {
 
 @import "normalize";
 @import "welcome";
-//@import "podcast";
+@import "podcasts";
