Add paperclip image uploading to podcasts & episodes

--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -7,7 +7,7 @@
       <% @podcasts.each do |podcast| %>
         <%= link_to podcast do %>
               <li>
-                <img src="images/pr16h1ab5d1.jpg" alt="Narwals Podcast">
+                <%= image_tag podcast.thumbnail.url(:medium) %>
                 <div class="podcast_overview">
                   <h2><%= podcast.title %></h2>
                   <p class="episode_count">1 episode</p>
