--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -26,7 +26,7 @@
 
   <div id="episode_content">
     <div class="wrapper_skinny">
-      <img src="images/IMG_0700.jpg" alt="Toothy" class="current_episode_thumbnail">
+      <%= image_tag @episode.episode_thumbnail.url(:medium), class: "current_episode_thumbnail"  %>
       <h2><%= @episode.title %></h2>
       <p class="description"><%= @episode.description %></p>
     </div>
@@ -38,7 +38,7 @@
             <li class="cf">
               <div class="episode_thumbnail">
                 <a href="episode.html">
-                  <img src="images/IMG_0700.jpg" alt="Tooth">
+                  <%= image_tag episode.episode_thumbnail.url(:medium) %>
                 </a>
               </div>
               <div class="episode_overview">
