--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -22,7 +22,7 @@
         <li class="cf">
           <div class="episode_thumbnail">
             <a href="episode.html">
-              <img src="images/IMG_0700.jpg" alt="Tooth">
+              <%= image_tag episode.episode_thumbnail.url(:medium) %>
             </a>
           </div>
           <div class="episode_overview">
