--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -28,7 +28,7 @@
             <li class="cf">
               <div class="episode_thumbnail">
                 <a href="#">
-                  <img src="images/IMG_0700.jpg" alt="Tooth">
+                  <%= image_tag episode.episode_thumbnail.url(:medium) %>
                 </a>
               </div>
               <div class="episode_overview">
