Added font-awesome gem to show in player

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -180,3 +180,5 @@ textarea {
 @import "normalize";
 @import "welcome";
 @import "podcasts";
+@import "font-awesome-sprockets";
+@import "font-awesome";
