--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div id="podcasts" class="cf">
   <div class="wrapper">
-    <ul>
+    <ul class="cf">
       <% @podcasts.each do |podcast| %>
         <%= link_to podcast do %>
               <li>
@@ -16,5 +16,6 @@
           <% end %>
       <% end %>
     </ul>
+    <%= will_paginate @podcasts, previous_label: "Previous", next_label: "Next" %>
   </div>
 </div>
