--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -104,10 +104,17 @@ body {
 
 .podcasts_banner {
   background-image: image-url("podcast_banner.jpeg");
+  opacity: 0.7;
 }
 
 .sign_up_banner {
   background-image: image-url("sign_up_banner.jpg");
+  position: cover;
+  opacity: 0.7;
+}
+
+.sign_in_banner {
+  background-image: image-url("sign_in_banner.jpg");
   position: cover;
   opacity: 0.7;
 }
